--- a/plate-drop-main-service/api/build.gradle
+++ b/plate-drop-main-service/api/build.gradle
@@ -25,6 +25,6 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    implementation project(':service')
+    implementation project(':business')
     implementation project(':domain')
 }
