--- a/plate-drop-main-service/business/build.gradle
+++ b/plate-drop-main-service/business/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation project(':domain')
-    implementation project (':repository')
+    implementation project (':persistence')
 }
 
 tasks.withType(JavaCompile).configureEach {
