--- a/plate-drop-main-service/business/build.gradle
+++ b/plate-drop-main-service/business/build.gradle
@@ -25,8 +25,10 @@ dependencyManagement {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
     implementation project(':domain')
     implementation project (':persistence')
 }
