--- a/plate-drop-main-service/domain/build.gradle
+++ b/plate-drop-main-service/domain/build.gradle
@@ -26,6 +26,7 @@ dependencyManagement {
 dependencies {
     implementation 'org.springframework.boot:spring-boot'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-validation:3.2.5'
 }
 
 tasks.withType(JavaCompile).configureEach {
