--- a/plate-drop-ui/package.json
+++ b/plate-drop-ui/package.json
@@ -15,7 +15,8 @@
     "antd": "^5.18.1",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
